--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 		Google AdSense
 	-->
 	<script data-ad-client="ca-pub-1512431930109573" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
 </head>
 <body>
 <header>
@@ -117,7 +116,10 @@
 		<span id="what_we_do2" style="	margin-top:155px;margin-left:854px;">What we do</span>
 		<img src="image/line_red.png" style="margin-top:220px;margin-left: 930px;position: absolute;">
 		<span id="txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim <br> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </span>
-		<img src="image/photo.png" style="margin-top:400px;margin-left:360px">
+		<img src="image/photo.png" style="margin-top:400px;margin-left:360px;position: absolute;">
+		<img src="image/photography.png" style="margin-top:400px;margin-left:960px; position: absolute;">
+		<a href="#"><img src="image/arrow.png" style="margin-top:424px;margin-left:1518px;position: absolute;"></a>
+		<img src="image/block1.png" style="margin-top:459px;margin-left:960px;position: absolute;">
 	</div>
 </section>
 
