--- a/golden/index.html
+++ b/golden/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Golden</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>Golden</title>
 </head>
 <body>
-	<div id="wrapper" style="max-width:1400px; height:auto; ">
-		<img src="images/logo.png" id="logo" width="79px">
-		<span id="welcome" style="position: absolute;">Welcome to our studio!</span>
-		<span id="meet">it's nice to meet you</span>
-
+	<div id='wrapper'>
+		<img src="images/logo.png" id="logo">
 		<ul>
-			<a href="#" class="nav"><li>Home</li></a>
-			<a href="#" class="nav"><li>Services</li></a>
-			<a href="#" class="nav"><li>Portfolio</li></a>
-			<a href="#" class="nav"><li>About</li></a>
-			<a href="#" class="nav"><li>Contact</li></a>
+			<a href="#"><li>Home</li></a>
+			<a href="#"><li>Services</li></a>
+			<a href="#"><li>Portfolio</li></a>
+			<a href="#"><li>About</li></a>
+			<a href="#"><li>Contact</li></a>
 		</ul>
-		<img src="images/first-bg.png" style="z-index: -1;" id="first-bg">
+		<img src="images/first-bg.png" id="first-bg">
 	</div>
 </body>
 </html>
