--- a/adap/index.html
+++ b/adap/index.html
@@ -14,6 +14,12 @@
 			<a href="#"><li>About</li></a>
 			<a href="#"><li>Contact</li></a>
 		</ul>
+		<!-- Welcome to our studio -->
+		<span id="welcome">welcome to our studio</span>
+		<!-- It's nice to meet you -->
+		<span id="nice">it's nice to meet you</span>
+		<!-- Button -->
+		<a href="#"><img src="images/button.png" id="button"></a>
 		<img src="images/first-bg.png" id="first-bg">
 	</div>
 </body>
