--- a/adap/index.html
+++ b/adap/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<script data-ad-client="ca-pub-1512431930109573" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<title>Golden</title>
 </head>
 <body>
