--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
 		<a href="#"><img src="images/button.png" id="button"></a>
 		<img src="images/first-bg.png" id="first-bg">
 	</div>
+	<div id="content1">
+		<span id="services">services</span>
+		<span id="text">Proin iaculis purus consequat sem cure.</span>
+	</div>
 </body>
 </html>
