--- a/index.html
+++ b/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
-<html lang="en-US">
-<head>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<script data-ad-client="ca-pub-1512431930109573" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<title>Golden</title>
-</head>
-<body>
-	<div id='wrapper'>
-		<img src="images/logo.png" id="logo">
-		<ul>
-			<a href="#"><li>Home</li></a>
-			<a href="#"><li>Services</li></a>
-			<a href="#"><li>Portfolio</li></a>
-			<a href="#"><li>About</li></a>
-			<a href="#"><li>Contact</li></a>
-		</ul>
-		<!-- Welcome to our studio -->
-		<span id="welcome">welcome to our studio</span>
-		<!-- It's nice to meet you -->
-		<span id="nice">it's nice to meet you</span>
-		<!-- Button -->
-		<a href="#"><img src="images/button.png" id="button"></a>
-		<img src="images/first-bg.png" id="first-bg">
-	</div>
-	<div id="content1">
-		<span id="services">services</span>
-		<span id="text">Proin iaculis purus consequat sem cure.</span>
-	</div>
-</body>
+<html lang="ru" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>Картошка chanel</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css"/>
+  </head>
+  <body>
+      <a class="logo" href="https://www.youtube.com/channel/UCFj7uiOIdsNB3Jb42jQEkvA"><h1>Канал Dato</h1></a>
+      <ul>
+        <a class="nav" href="https://vk.com/id450645994"><li>Я ВКонтакте</li></a>
+        <a class="nav" href="https://www.facebook.com/dato.merabyan"><li>Я в Фейсбуке</li></a>
+        <a class="nav" href="https://www.instagram.com/datomerabyan/"><li>Я в Инстаграме</li></a>
+      </ul>
+      <hr/>
+      <h2>Некоторые из моих видео: </h2>
+      <iframe width="445" height="350"src="https://www.youtube.com/embed/yFMOOHRga6s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="445" height="350"src="https://www.youtube.com/embed/Zb-JuPiLSPU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="445" height="350"src="https://www.youtube.com/embed/A5-V-svd_Zo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="445" height="350" src="https://www.youtube.com/embed/pLTuL24OY7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="445" height="350" src="https://www.youtube.com/embed/sHY1QV7q9v8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="445" height="350" src="https://www.youtube.com/embed/JbNkXewZfjc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h2>Описание: </h2>
+      <h5>Всё о Brawl Stars, включая гайды, летсплеи, прикольные моменты и т.д</h5>
+      <h5 style="color:green">Бро, подпишись, пожалуйста!</h5>
+  </body>
 </html>
